--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 DS/Stack/.vscode/settings.json
+.idea/Data-Structer-and-Algorithms.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/profiles_settings.xml
