deque implementayion with doubly linked list

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ DS/Stack/.vscode/settings.json
 .idea/modules.xml
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
+DS/LinkedList/__pycache__/doubly_linkedlist.cpython-310.pyc
