more stack problems

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ DS/Stack/.vscode/settings.json
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
 DS/LinkedList/__pycache__/doubly_linkedlist.cpython-310.pyc
+DS/Stack/.idea/misc.xml
+DS/Stack/.idea/modules.xml
+DS/Stack/.idea/Stack.iml
+DS/Stack/.idea/vcs.xml
+DS/Stack/.idea/inspectionProfiles/profiles_settings.xml
+DS/Stack/__pycache__/stack_array_based.cpython-310.pyc
+DS/Stack/__pycache__/stack_array_based.cpython-310.pyc
